# intelli_agriculture

./: .gitignore  CMakeLists.txt  readme.md  readme.txt
esp32/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32/main/: CMakeLists.txt  main.cpp
include/ia/: defined.h  factory.h  hardware.h  ia.h
include/ia/hardware/: defined.h  keyboard.h  screen.h
include/ia/hardware/sensor/: humidity.h  light.h  temperature.h
main/: CMakeLists.txt  CMakeSettings.json  buid.bat  build.sh  intelli_agriculture.sln
main/cmake/: esp_build.cmake
main/include/ia/: api.h  config.h  core.h  defined.h  detail.hpp  ia.h  ia.hpp  ia_main.hpp  intelli_agriculture.vcxproj  intelli_agriculture.vcxproj.filters  test.hpp
main/include/ia/api/: defined.h  embedded.h  factory.h  hardware.h
main/include/ia/api/embedded/: defined.h
main/include/ia/api/hardware/: defined.h  fan.h  flashlight.h  keyboard.h  screen.h  sensor.h  temperature_controller.h
main/include/ia/api/hardware/sensor/: defined.h  humidity.h  photosensor.h  temperature.h
main/include/ia/core/: defined.h  font.h  framebuffer.h  render.h  transformer.h
main/include/ia/core/font/: font.h  text.h
main/include/ia/detail/: defined.h  factory.h  factory.hpp  hardward.h  hardware.h  hardware.hpp  ia_main.hpp
main/include/ia/detail/hardward/: esp.h  windows.h
main/include/ia/detail/hardward/esp/: temperature.h
main/include/ia/detail/hardward/windows/: temperature.h
main/include/ia/detail/hardware/: esp.h  esp.hpp  windows.h  windows.hpp
main/include/ia/detail/hardware/esp/: aht.h  aht.hpp  config.h  defined.h  dht.h  dht.hpp  factory.hpp  flashlight.h  keyboard.h  lcd.h  lcd.hpp  ldr.h  ldr.hpp  motor.h  temperature_controller.h
main/include/ia/detail/hardware/esp/aht/: aht.h  aht.hpp
main/include/ia/detail/hardware/esp/dht11/: dht.h  dht.hpp
main/include/ia/detail/hardware/esp/lcd/: command.h  lcd.h  lcd.hpp
main/include/ia/detail/hardware/windows/: factory.hpp  keyboard.h  screen.h  temperature.h
main/src/: CMakeLists.txt  ia_main.cpp  main.cpp
main/src/esp32/: CMakeLists.txt
main/src/windows/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/esp32/: factory.cpp
src/windows/sensor/: temperature.cpp  temperature.h
